--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,19 +3,14 @@ server:
   servlet:
     context-path: /todo-list-app
 
-#api:
-#  cepik:
-#    url: https://api.cepik.gov.pl/
 
 spring:
-#    security:
-#      enabled: false
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5433/todo_list_app
+    url: jdbc:postgresql://localhost:5432/todo_list_app
     username: postgres
-    password: postgres
+    password: postgresql
     hikari:
       idle-timeout: 10000
       connectionTimeout: 20000
